--- a/notebooks/01_etl_limpieza.ipynb
+++ b/notebooks/01_etl_limpieza.ipynb
@@ -366,7 +366,7 @@
     "\n",
     "print(df['Propósito'].value_counts())\n",
     "\n",
-    "# D. Traducir Cuentas (Sirve para Ahorro y Corriente)\n",
+    "# D. Traducir Cuentas (Ahorro y Corriente)\n",
     "\n",
     "mapa_dinero = {\n",
     "    'little': 'Poco',\n",
@@ -667,7 +667,7 @@
     "\n",
     "from scripts.reglas_negocio import obtener_score, definir_etiqueta\n",
     "\n",
-    "print(\"✅ Funciones de negocio importadas correctamente desde scripts/reglas_negocio.py\")\n",
+    "print(\" Funciones de negocio importadas correctamente desde scripts/reglas_negocio.py\")\n",
     "\n",
     "# axis=1 es vital para ir fila por fila\n",
     "df['Score'] = df.apply(obtener_score, axis=1)\n",
