--- a/notebooks/02_eda_visualizacion.ipynb
+++ b/notebooks/02_eda_visualizacion.ipynb
@@ -256,12 +256,12 @@
     "# Cargar datos\n",
     "try:\n",
     "    df = pd.read_csv(ruta_clean)\n",
-    "    print(f\"✅ Carga Exitosa: {df.shape[0]} registros importados desde 'processed'.\")\n",
+    "    print(f\"Carga Exitosa: {df.shape[0]} registros importados desde 'processed'.\")\n",
     "    print(\"--- Primeras 3 filas para verificación ---\")\n",
     "    display(df.head(3))\n",
     "except FileNotFoundError:\n",
-    "    print(f\"❌ ERROR CRÍTICO: No se encontró el archivo en {ruta_clean}\")\n",
-    "    print(\"⚠️ Asegúrate de haber ejecutado el Notebook 01 primero.\")"
+    "    print(f\"ERROR CRÍTICO: No se encontró el archivo en {ruta_clean}\")\n",
+    "    print(\"Asegúrate de haber ejecutado el Notebook 01 primero.\")"
    ]
   },
   {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "36ed1d59",
    "metadata": {},
    "outputs": [
@@ -355,8 +355,8 @@
     "# --- HIPÓTESIS 1: IMPACTO DEL TRABAJO ---\n",
     "plt.subplot(1, 2, 1)\n",
     "# Ordenamos las cajas para que se vea la escalera de \"Peor Trabajo\" a \"Mejor Trabajo\"\n",
-    "# (Ajusta los nombres de la lista 'order' si en tu data son diferentes, ej: 'Desempleado', 'Autónomo', etc.)\n",
-    "orden_trabajo = df['Id_Trabajo'].unique() # O puedes escribir la lista manual ['Desempleado', 'Calificado'...]\n",
+    "\n",
+    "orden_trabajo = df['Id_Trabajo'].unique() \n",
     "sns.boxplot(x='Id_Trabajo', y='Score', data=df, hue='Id_Trabajo', legend=False, palette='viridis', order=orden_trabajo)\n",
     "plt.title('Score según Tipo de Trabajo', fontsize=12, fontweight='bold')\n",
     "plt.xticks(rotation=45)\n",
