--- a/notebooks/01_etl_limpieza.ipynb
+++ b/notebooks/01_etl_limpieza.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a39895f0",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cf017314",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "430c3a5e",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "72f608e1",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "aab23182",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c36d2bbb",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "9fce7ed2",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "0dc2c79d",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "3cd2c2f2",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fd34ce5a",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4670fba7",
    "metadata": {},
    "outputs": [
@@ -419,13 +419,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " Funciones de negocio importadas correctamente desde scripts/reglas_negocio.py\n",
       "--- Distribución del Riesgo (Corte < 82) ---\n",
       "Resultado_Riesgo\n",
       "Normal        615\n",
       "Deficiente    385\n",
       "Name: count, dtype: int64\n",
       "\n",
-      "--- ¡Mira! Ahora tienes Score Y Resultado ---\n"
+      "--- Muestra de Datos ---\n"
      ]
     },
     {
@@ -458,82 +459,47 @@
          "type": "string"
         }
        ],
-       "ref": "5536163e-c9fd-4bab-bb0f-349c02e7b9e7",
+       "ref": "f18c30f0-bb40-413e-96c3-1717fea4b688",
        "rows": [
         [
-         "950",
-         "40",
-         "Negocios",
-         "70",
-         "Deficiente"
-        ],
-        [
-         "399",
-         "43",
-         "Electrodomésticos",
-         "80",
-         "Deficiente"
-        ],
-        [
-         "169",
-         "31",
-         "Negocios",
-         "100",
-         "Normal"
-        ],
-        [
-         "742",
-         "41",
+         "0",
+         "67",
          "Electrodomésticos",
          "90",
          "Normal"
         ],
         [
-         "662",
-         "50",
-         "Muebles/Equip.",
-         "100",
-         "Normal"
-        ],
-        [
-         "871",
-         "46",
-         "Vehículo",
-         "100",
-         "Normal"
-        ],
-        [
-         "355",
-         "23",
-         "Vehículo",
+         "1",
+         "22",
+         "Electrodomésticos",
          "80",
          "Deficiente"
         ],
         [
-         "586",
-         "36",
-         "Vehículo",
-         "80",
-         "Deficiente"
-        ],
-        [
-         "911",
-         "25",
-         "Muebles/Equip.",
-         "90",
-         "Normal"
-        ],
-        [
-         "318",
-         "32",
+         "2",
+         "49",
          "Educación",
-         "100",
+         "90",
          "Normal"
+        ],
+        [
+         "3",
+         "45",
+         "Muebles/Equip.",
+         "80",
+         "Deficiente"
+        ],
+        [
+         "4",
+         "53",
+         "Vehículo",
+         "80",
+         "Deficiente"
         ]
        ],
        "shape": {
         "columns": 4,
-        "rows": 10
+        "rows": 5
        }
       },
       "text/html": [
@@ -563,91 +529,51 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>950</th>\n",
-       "      <td>40</td>\n",
-       "      <td>Negocios</td>\n",
-       "      <td>70</td>\n",
-       "      <td>Deficiente</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>399</th>\n",
-       "      <td>43</td>\n",
-       "      <td>Electrodomésticos</td>\n",
-       "      <td>80</td>\n",
-       "      <td>Deficiente</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>169</th>\n",
-       "      <td>31</td>\n",
-       "      <td>Negocios</td>\n",
-       "      <td>100</td>\n",
-       "      <td>Normal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>742</th>\n",
-       "      <td>41</td>\n",
+       "      <th>0</th>\n",
+       "      <td>67</td>\n",
        "      <td>Electrodomésticos</td>\n",
        "      <td>90</td>\n",
        "      <td>Normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>662</th>\n",
-       "      <td>50</td>\n",
-       "      <td>Muebles/Equip.</td>\n",
-       "      <td>100</td>\n",
-       "      <td>Normal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>871</th>\n",
-       "      <td>46</td>\n",
-       "      <td>Vehículo</td>\n",
-       "      <td>100</td>\n",
-       "      <td>Normal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>355</th>\n",
-       "      <td>23</td>\n",
-       "      <td>Vehículo</td>\n",
+       "      <th>1</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Electrodomésticos</td>\n",
        "      <td>80</td>\n",
        "      <td>Deficiente</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>586</th>\n",
-       "      <td>36</td>\n",
-       "      <td>Vehículo</td>\n",
-       "      <td>80</td>\n",
-       "      <td>Deficiente</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>911</th>\n",
-       "      <td>25</td>\n",
-       "      <td>Muebles/Equip.</td>\n",
-       "      <td>90</td>\n",
-       "      <td>Normal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>318</th>\n",
-       "      <td>32</td>\n",
+       "      <th>2</th>\n",
+       "      <td>49</td>\n",
        "      <td>Educación</td>\n",
-       "      <td>100</td>\n",
+       "      <td>90</td>\n",
        "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45</td>\n",
+       "      <td>Muebles/Equip.</td>\n",
+       "      <td>80</td>\n",
+       "      <td>Deficiente</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>53</td>\n",
+       "      <td>Vehículo</td>\n",
+       "      <td>80</td>\n",
+       "      <td>Deficiente</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Edad          Propósito  Score Resultado_Riesgo\n",
-       "950    40           Negocios     70       Deficiente\n",
-       "399    43  Electrodomésticos     80       Deficiente\n",
-       "169    31           Negocios    100           Normal\n",
-       "742    41  Electrodomésticos     90           Normal\n",
-       "662    50     Muebles/Equip.    100           Normal\n",
-       "871    46           Vehículo    100           Normal\n",
-       "355    23           Vehículo     80       Deficiente\n",
-       "586    36           Vehículo     80       Deficiente\n",
-       "911    25     Muebles/Equip.     90           Normal\n",
-       "318    32          Educación    100           Normal"
+       "   Edad          Propósito  Score Resultado_Riesgo\n",
+       "0    67  Electrodomésticos     90           Normal\n",
+       "1    22  Electrodomésticos     80       Deficiente\n",
+       "2    49          Educación     90           Normal\n",
+       "3    45     Muebles/Equip.     80       Deficiente\n",
+       "4    53           Vehículo     80       Deficiente"
       ]
      },
      "metadata": {},
@@ -694,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "c6535584",
    "metadata": {},
    "outputs": [
@@ -716,7 +642,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
